file structure/handlebars

--- a/public/views/login.handlebars
+++ b/public/views/login.handlebars
@@ -18,13 +18,19 @@
   <body>
     <div class="card">
       <div class="card-content center-align">
-        <h1>Recipe Book</h1>
+        <h1>Recipe Book Login</h1>
+        <p>This is an online recipe book where you can store recipes and create new ones.</p>
       </div>
 
       <div class="card-content center-align">
+        <div id="instDiv">
+            <div class="input-field col s6">
+              <input value="User1" id="first_name2" type="text" class="validate" />
+              <label class="active">User name</label>
+            </div>
         <span class="card-title activator grey-text text-darken-4"> </span>
-        <a class="waves-effect waves-light btn-large blue">View Recipes</a>
-        <a class="waves-effect waves-light btn-large blue">Add a Recipe</a>
+        <a class="waves-effect waves-light btn-large blue">Login</a>
+        <p><a href="#">Create New User</a></p>
       </div>
     </div>
 
