--- a/public/views/menu.handlebars
+++ b/public/views/menu.handlebars
@@ -16,28 +16,20 @@
     <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
-    <div class="card large">
-      <div id="card-content" class="card-content center-align">
-        <h1>Add Recipe</h1>
+    <div class="card">
+      <div class="card-content center-align">
+        <h1>Recipe Book</h1>
+        <p>This is an online recipe book where you can store recipes and create new ones.</p>
       </div>
 
       <div class="card-content center-align">
         <span class="card-title activator grey-text text-darken-4"> </span>
-        <div id="instDiv">
-          <div class="input-field col s6">
-            <input value="Soup" id="first_name2" type="text" class="validate" />
-            <label class="active">Recipe Name</label>
-          </div>
-        </div>
-        <a id="instruction" class="waves-effect waves-light btn-large blue">Add Instruction</a>
-        <a id="ingredient" class="waves-effect waves-light btn-large blue">Add Ingredient</a>
-      </div>
-      <div class="card-content center-align">
-        <a id="Save" class="waves-effect waves-light btn-large blue">Save Recipe</a>
+        <a id="view" class="waves-effect waves-light btn-large blue">View Recipes</a>
+        <a id="add" class="waves-effect waves-light btn-large blue">Add a Recipe</a>
       </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../css/add.js"></script>
+    <script src="/js/menu.js"></script>
   </body>
 </html>
