--- a/public/views/recipes.handlebars
+++ b/public/views/recipes.handlebars
@@ -16,12 +16,12 @@
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper blue">
+      <div class="nav-wrapper grey lighten-3">
         <form>
           <div class="input-field">
             <input id="search" type="search" required />
-            <label class="label-icon white-text" for="search"
-              >Search For a Recipe<i class="material-icons"></i
+            <label class="label-icon black-text" for="search" value="Search for a Recipe"
+              ><i class="material-icons"></i
             ></label>
             <i class="material-icons">close</i>
           </div>
@@ -30,15 +30,15 @@
       </div>
     </nav>
     <div class="row">
-      <div class="col s3 teal">
+      <div class="col s3 blue white-text">
         <div class="collection">
-          <a href="#!" class="collection-item">Alan</a>
-          <a href="#!" class="collection-item">Alan</a>
-          <a href="#!" class="collection-item">Alan</a>
-          <a href="#!" class="collection-item">Alan</a>
+          <a href="#!" class="collection-item blue-text">Soup</a>
+          <a href="#!" class="collection-item blue-text">Steak</a>
+          <a href="#!" class="collection-item blue-text">Fish</a>
+          <a href="#!" class="collection-item blue-text">Water</a>
         </div>
       </div>
-      <div class="col s9 teal">11111</div>
+      <div class="col s9 blue white-text">11111</div>
     </div>
 
     <script src="" async defer></script>
