working handlebars/working html routes/working forms

--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -21,6 +21,7 @@
     </div>
   </div>
   <div class="col s9 blue white-text">11111</div>
+  <p><a href="/">Menu</a></p>
 </div>
 
 <script src="" async defer></script>
