--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -9,14 +9,14 @@
   <span class="card-title activator grey-text text-darken-4"> </span>
   <div id="instDiv">
     <div class="input-field col s6">
-      <input value="Soup" id="first_name2" type="text" class="validate" />
+      <input value="Soup" id="recipe-name" type="text" class="validate" />
       <label class="active">Recipe Name</label>
     </div>
     <div class="input-field col s6">
       <input value="Egg" id="ingredient" type="text" class="validate" />
       <label class="active">ingredients</label>
     </div>
-    <a id="ingredient" class="waves-effect waves-light btn-large blue">Add Ingredient</a>
+    <a id="addIngredient" class="waves-effect waves-light btn-large blue">Add Ingredient</a>
   </div>
   <br />
 </div>
@@ -25,8 +25,8 @@
 </div>
 <br />
 <div class="card-content center-align">
-  <a id="Save" class="waves-effect waves-light btn-large blue">Save Recipe</a>
-  <p><a href="#">Menu</a></p>
+  <a id="save" class="waves-effect waves-light btn-large blue">Save Recipe</a>
+  <p><a href="/">Menu</a></p>
 </div>
 <!-- </div> -->
 
