working recipe api request

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,6 +12,10 @@
         <input value="User1" id="UserName" type="text" class="validate" />
         <label class="active">User name</label>
       </div>
+      <div class="input-field col s6">
+        <input value="password" id="password" type="password" class="validate" />
+        <label class="active">Password</label>
+      </div>
       <span class="card-title activator grey-text text-darken-4"> </span>
       <a id="loginBtn" class="waves-effect waves-light btn-large blue">Login</a>
       <p><a href="/signUp">Create New User</a></p>
