--- a/views/newUser.handlebars
+++ b/views/newUser.handlebars
@@ -12,6 +12,10 @@
         <input value="User1" id="newUser" type="text" class="validate" />
         <label class="active">New User name</label>
       </div>
+      <div class="input-field col s6">
+        <input value="password" id="newPassword" type="password" class="validate" />
+        <label class="active">New Password</label>
+      </div>
       <span class="card-title activator grey-text text-darken-4"> </span>
       <a id="addUser" class="waves-effect waves-light btn-large blue">Add New User</a>
       <p><a href="/login">Login</a></p>
