all api post routes

--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -18,11 +18,33 @@
       <a href="#!" class="collection-item blue-text">Steak</a>
       <a href="#!" class="collection-item blue-text">Fish</a>
       <a href="#!" class="collection-item blue-text">Water</a>
+
     </div>
+    <p><a class=" white-text" href="/">Menu</a></p>
   </div>
-  <div class="col s9 blue white-text">11111</div>
-  <p><a href="/">Menu</a></p>
+  <div class="col s9 blue white-text">
+    <h1>Recipe Name</h1>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>
+        1
+      </li>
+      <li>
+        3
+      </li>
+    </ul>
+    <h3>Instructions</h3>
+    <ul>
+      <li>
+        1
+      </li>
+      <li>
+        3
+      </li>
+    </ul>
+  </div>
+
 </div>
 
-<script src="" async defer></script>
+<script src="/js/recipes.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
