Modified JWT for user identication

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
   <div class="card-content center-align">
     <div id="instDiv">
       <div class="input-field col s6">
-        <input value="User1" id="UserName" type="text" class="validate" />
+        <input value="User1" id="username" type="text" class="validate" />
         <label class="active">User name</label>
       </div>
       <div class="input-field col s6">
