Add test case for view. Create timeout variable in config

--- a/views/testAuth.handlebars
+++ b/views/testAuth.handlebars
@@ -1,3 +1,4 @@
 <div>This is a test</div>
 <input id="getUser" type="button" value="Get Username"/>
+<input id="recipeView" type="button" value="View Recipe"/>
 <script src="/js/testAuth.js"></script>
