Modified table User and Recipe. Test routes in /testAdd and /testView, called in /test

--- a/views/test.handlebars
+++ b/views/test.handlebars
@@ -1,3 +1,4 @@
 <div>This is a test</div>
 <input id="postRecipe" type="button" value="POST Recipe"/>
+<input id="viewRecipe" type="button" value="VIEW Recipe"/>
 <script src="/js/test.js"></script>
