--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -1,6 +1,6 @@
 <!-- <div class="card large"> -->
 <link rel="stylesheet" href="../css/home.css" />
-
+{{!-- add error message if view is empty --}}
 <div id="card-content" class="card-content center-align">
   <h1>Add Recipe</h1>
 </div>
