working handlebars for first item in db

--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -1,11 +1,11 @@
 <nav>
   <div class="nav-wrapper orange darken-1">
 
-      <a href="#!" class="brand-logo"><i class="material-icons">book</i>myCookbook</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/newRecipe">Add</a></li>
-        <li><a class="" href="/login">Exit</a></li>
-      </ul>
+    <a href="#!" class="brand-logo"><i class="material-icons">book</i>myCookbook</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="/newRecipe">Add</a></li>
+      <li><a class="" href="/login">Exit</a></li>
+    </ul>
     {{!-- <form>
       <div class="input-field">
         <input id="search" type="search" required />
@@ -20,21 +20,16 @@
 
 <div class="row ">
   <div class="col yellow darken-2 side-nav">
-          <form>
-        <div class="input-field">
-          <input id="search" type="search" required>
-          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-          <i class="material-icons">close</i>
-        </div>
-      </form>
+    <form>
+      <div class="input-field">
+        <input id="search" type="search" required>
+        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+        <i class="material-icons">close</i>
+      </div>
+    </form>
     <div class="collection">
-<<<<<<< HEAD
-      {{#each titles}}
+      {{#each title}}
       <a href="" id={{this.id}} class="collection-item blue-text">{{this.title}}</a>
-=======
-      {{#each recipes}}
-      <a href="#!" class="collection-item black-text">{{this.title}}</a>
->>>>>>> main
       {{/each}}
     </div>
     <p><a class=" white-text" href="/">Menu</a></p>
@@ -43,51 +38,52 @@
     <h1>{{recipe.title}}</h1>
     <h3>Ingredients</h3>
     <ul>
-      {{#each recipe.ingredients}}
+      {{#each recipe.Ingredients}}
       <li>
-        {{"something"}}
+        {{dataValues.RecIng.dataValues.quantity}}{{dataValues.RecIng.dataValues.measurement}}{{dataValues.name}}
       </li>
       {{/each}}
     </ul>
     <h3>Instructions</h3>
     <ul>
-      {{#each recipe.instructions}}
+      {{#each instructions}}
       <li>
         {{this}}
       </li>
       {{/each}}
     </ul>
   </div>
-<div class="container recipe-page">
+  <div class="container recipe-page">
     <div class="col">
       {{!-- <h1>{{recipe.name}}</h1> --}}
-      <h2>Chiken Tikka Masala</h1>
-      <h4>Ingredients</h3>
-      <ul>
-        {{#each ingredient}}
-        <li>
-          {{this.ingridientName}}
-        </li>
-        {{/each}}
-        <li>Chicken</li>
-        <li>Tikka</li>
-        <li>Masala</li>
-      </ul>
+      {{!-- <h2>Chiken Tikka Masala</h1>
+        <h4>Ingredients</h3>
+          <ul>
+            {{#each ingredient}}
+            <li>
+              {{this.ingridientName}}
+            </li>
+            {{/each}}
+            <li>Chicken</li>
+            <li>Tikka</li>
+            <li>Masala</li>
+          </ul>
 
-      <h4>Instructions</h3>
-      <ul>
-        {{#each instructions}}
-        <li>
-          {{this.instructionName}}
-        </li>
-        {{/each}}
-        <li>Prepare</li>
-        <li>Cook</li>
-        <li>Eat</li>
-      </ul>
+          <h4>Instructions</h3>
+            <ul>
+              {{#each instructions}}
+              <li>
+                {{this.instructionName}}
+              </li>
+              {{/each}}
+              <li>Prepare</li>
+              <li>Cook</li>
+              <li>Eat</li>
+            </ul> --}}
     </div>
-  </div><!--containter-->
-  
+  </div>
+  <!--containter-->
+
 </div>
 
 <script src="/js/recipes.js"></script>
