update styling consistency

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,10 @@ body {
   margin-top: 100px;
 }
 
+a {
+  color: darkgoldenrod;
+}
+
 .home-div {
   background-color: red;
   width: 500px;
@@ -20,4 +24,12 @@ body {
 }
 .buttons {
   background-color: violet;
+}
+
+#logo {
+  font-family: 'Raleway', sans-serif;
+}
+
+#loginBtn {
+  margin-bottom: 1rem;
 }
