--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,23 +2,25 @@
 
 <div class="card">
   <div class="card-content center-align">
-    <h1>Recipe Book Login</h1>
-    <p>This is an online recipe book where you can store recipes and create new ones.</p>
+  <h1 id="logo"><i class="medium material-icons">book</i>RecipeBook</h1>
+    <p>An online recipe book to save and view your favorite recipes.</p>
   </div>
 
+
   <div class="card-content center-align">
+      <h4 class="center-align">Login</h4>
     <div id="instDiv">
       <div class="input-field col s6">
         <input value="User1" id="username" type="text" class="validate" />
-        <label class="active">User name</label>
+        <label class="active">Username</label>
       </div>
       <div class="input-field col s6">
         <input value="password" id="password" type="password" class="validate" />
         <label class="active">Password</label>
       </div>
       <span class="card-title activator grey-text text-darken-4"> </span>
-      <a id="loginBtn" class="waves-effect waves-light btn-large blue">Login</a>
-      <p><a href="/signUp">Create New User</a></p>
+      <a id="loginBtn" class="waves-effect waves-light btn-large yellow darken-2">Login</a>
+      <p class="signup"><a href="/signUp">Create New User</a></p>
     </div>
   </div>
 
