--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -2,14 +2,14 @@
 
 <div class="card">
   <div class="card-content center-align">
-    <h1>Recipe Book</h1>
-    <p>This is an online recipe book where you can store recipes and create new ones.</p>
+    <h1><i class="medium material-icons">book</i>RecipeBook</h1>
+    <p>An online recipe book to save and view your favorite recipes.</p>
   </div>
 
   <div class="card-content center-align">
     <span class="card-title activator grey-text text-darken-4"> </span>
-    <a id="view" class="waves-effect waves-light btn-large blue">View Recipes</a>
-    <a id="add" class="waves-effect waves-light btn-large blue">Add a Recipe</a>
+    <a id="view" class="waves-effect waves-light btn-large yellow darken-2">View Recipes</a>
+    <a id="add" class="waves-effect waves-light btn-large yellow darken-2">Add a Recipe</a>
   </div>
 </div>
 
