Add checkbox for public/private recipes

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -51,6 +51,14 @@
       </ul>
     </div>
   </div>
+  <div class="row">
+    <p>
+      <label>
+        <input id= "makePublic" type="checkbox" />
+        <span>Visible to Everyone</span>
+      </label>
+    </p>
+  </div>
 </div>
 
 <div class="card-content center-align">
