update new user page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
 <div class="card">
   <div class="card-content center-align">
   <h1 id="logo"><i class="medium material-icons">book</i>RecipeBook</h1>
-    <p>An online recipe book to save and view your favorite recipes.</p>
+    <p>An online recipe book to view sand save your favorite recipes.</p>
   </div>
 
 
