update add recipe

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -1,17 +1,20 @@
 <!-- <div class="card large"> -->
 <link rel="stylesheet" href="../css/home.css" />
 {{!-- add error message if view is empty --}}
+
 <div id="card-content" class="card-content center-align">
-  <h1>Add Recipe</h1>
+      <div id="logo" class="logo brand-logo"><i class="small material-icons">book</i>RecipeBook</div>
+  
 </div>
 
 <div class="card-content center-align">
+  <h4>Add Recipe</h4>
   <span class="card-title activator grey-text text-darken-4"> </span>
   <div id="instDiv">
     <div class="input-field col s6">
       <input value="Soup" id="recipe-name" type="text" class="validate" />
       <label class="active">Recipe Name</label>
-      <a id="addName" class="waves-effect waves-light btn-large blue">Add Recipe name</a>
+      <a id="addName" class="waves-effect waves-light btn-large yellow darken-2">Add Recipe name</a>
     </div>
     <div class="row">
       <div class="input-field col s3">
@@ -26,14 +29,14 @@
         <input value="Egg" id="ingredient" type="text" class="validate" />
         <label class="active">Ingredients</label>
       </div>
-      <a id="addIngredient" class="waves-effect waves-light btn-large blue">Add Ingredient</a>
+      <a id="addIngredient" class="waves-effect waves-light btn-large yellow darken-2">Add Ingredient</a>
 
     </div>
     <div class=" center-align">
       <div class="input-field col s6 center-align">
         <input value="Instruction" id="instruction" type="text" class="validate" />
         <label class="active">Instruction</label>
-        <a id="addInstruction" class="waves-effect waves-light btn-large blue">Add Instruction</a>
+        <a id="addInstruction" class="waves-effect waves-light btn-large yellow darken-2">Add Instruction</a>
       </div>
     </div>
   </div>
@@ -62,7 +65,7 @@
 </div>
 
 <div class="card-content center-align">
-  <a id="save" class="waves-effect waves-light btn-large blue">Save Recipe</a>
+  <a id="save" class="waves-effect waves-light btn-large yellow darken-2">Save Recipe</a>
   <p><a href="/">Menu</a></p>
 </div>
 <!-- </div> -->
