--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
         <label class="active">Password</label>
       </div>
       <span class="card-title activator grey-text text-darken-4"> </span>
-      <a id="loginBtn" class="waves-effect waves-light btn-large yellow darken-2">Login</a>
+      <a id="loginBtn" class="login-add-btn waves-effect waves-light btn-large yellow darken-2">Login</a>
       <p class="signup"><a href="/signUp">Create New User</a></p>
     </div>
   </div>
