--- a/views/newUser.handlebars
+++ b/views/newUser.handlebars
@@ -17,7 +17,7 @@
         <label class="active">Password</label>
       </div>
       <span class="card-title activator grey-text text-darken-4"> </span>
-      <a id="addUser" class="waves-effect waves-light btn-large yellow darken-2">Add New User</a>
+      <a id="addUser" class="login-add-btn waves-effect waves-light btn-large yellow darken-2">Add New User</a>
       <p><a href="/login">Login</a></p>
     </div>
   </div>
