--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -18,15 +18,15 @@
     </div>
     <div class="row">
       <div class="input-field col s3">
-        <input value="3" id="amount" type="text" class="validate" />
+        <input value="" id="amount" type="text" class="validate" />
         <label class="active">Quantity</label>
       </div>
       <div class="input-field col s3">
-        <input value="oz" id="measure" type="text" class="validate" />
+        <input value="" id="measure" type="text" class="validate" />
         <label class="active">Measurement</label>
       </div>
       <div class="input-field col s6">
-        <input value="Egg" id="ingredient" type="text" class="validate" />
+        <input value="" id="ingredient" type="text" class="validate" />
         <label class="active">Ingredients</label>
       </div>
       <a id="addIngredient" class="waves-effect waves-light btn-large yellow darken-2">Add Ingredient</a>
