--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -1,5 +1,8 @@
-.container {
-    margin-left: 1rem;
-};
+/* .container {
+    margin-top: 1rem;
+}; */
 
-
+.recipe-card {
+    border: 1px solid black;
+    box-shadow: 5px 5px 5px #888888;
+}
