--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -3,7 +3,7 @@
 <nav>
   <div class="nav-wrapper yellow darken-2">
 
-    <div id="logo" class="logo brand-logo"><i class="small material-icons">book</i>RecipeBook</div>
+    <div id="logo" class="logo brand-logo"><i class="material-icons">book</i>RecipeBook</div>
 
     <ul class="right hide-on-med-and-down">
       <li><a href="/newRecipe">Add</a></li>
@@ -15,7 +15,7 @@
 </nav>
 
 <div class="row ">
-  <div class="col side-nav">
+  <div class="col s2 side-nav">
     <form>
       <div class="input-field">
         <input id="search" type="search" required>
@@ -30,33 +30,30 @@
     </div>
       </div>
 
-
-  <div class="container recipe-page">
-
-      <div class="col s9">
-    <h1>{{recipe.title}}</h1>
-    <h3>Ingredients</h3>
-    <ul>
-      {{#each recipe.ingredients}}
-      <li>
-        {{this.quantity}} {{this.measurement}} {{this.name}}
-      </li>
-      {{/each}}
-    </ul>
-    <h3>Instructions</h3>
-    <ul>
-      {{#each recipe.instructions}}
-      <li>
-        {{this}}
-      </li>
-      {{/each}}
-    </ul>
-  </div>
-
-    
-</div> <!--containter-->
-
-</div>
+  
+  <div class="container col">
+    <div class="col recipe-card">
+      <div class="col s1">
+        <h1>{{recipe.title}}</h1>
+        <h3>Ingredients</h3>
+        <ul>
+          {{#each recipe.ingredients}}
+          <li>
+            {{this.quantity}} {{this.measurement}} {{this.name}}
+          </li>
+          {{/each}}
+        </ul>
+        <h3>Instructions</h3>
+        <ul>
+          {{#each recipe.instructions}}
+          <li>
+            {{this}}
+          </li>
+          {{/each}}
+        </ul>
+      </div> <!--recipe card-->
+    </div> <!--recipe section-->
+  </div> <!--containter-->
 
 <script src="/js/recipes.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
