Handle login failures

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,6 +18,7 @@
         <input value="password" id="password" type="password" class="validate" />
         <label class="active">Password</label>
       </div>
+      <div class="red-text text-darken-3" id="errorMsg" style="display:none"></div>
       <span class="card-title activator grey-text text-darken-4"> </span>
       <a id="loginBtn" class="login-add-btn waves-effect waves-light btn-large yellow darken-2">Login</a>
       <p class="signup"><a href="/signUp">Create New User</a></p>
