Handle login failures

--- a/views/newUser.handlebars
+++ b/views/newUser.handlebars
@@ -16,6 +16,7 @@
         <input value="password" id="newPassword" type="password" class="validate" />
         <label class="active">Password</label>
       </div>
+      <div class="red-text text-darken-3" id="resMsg" style="display:none"></div>
       <span class="card-title activator grey-text text-darken-4"> </span>
       <a id="addUser" class="login-add-btn waves-effect waves-light btn-large yellow darken-2">Add New User</a>
       <p><a href="/login">Login</a></p>
