Button redirects to menu. Variable name changed in js

--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -7,7 +7,7 @@
   </div>
   
   <div class="card-content center-align">
-    <a id="goBack" class="waves-effect waves-light btn-large yellow darken-2">Go Back</a>
+    <a id="backToMenu" class="waves-effect waves-light btn-large yellow darken-2">Back To Menu</a>
   </div>
 </div>
 
