--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -19,7 +19,7 @@
     <form>
       <div class="input-field">
         <input id="search" type="search" required>
-        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+        <label class="label-icon" for="search" id="searchBtn"><i class="material-icons">search</i></label>
         <i class="material-icons">close</i>
       </div>
     </form>
