--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -25,6 +25,7 @@
     <span class="card-title activator grey-text text-darken-4"> </span>
     <div id="instDiv">
       <div class="input-field col s6">
+        {{!-- remove soup from input field --}}
         <input value="Soup" id="recipe-name" type="text" class="validate" />
         <label class="active">Recipe Name</label>
         <a id="addName" class="waves-effect waves-light btn-large yellow darken-2">Add Recipe name</a>
@@ -70,7 +71,7 @@
     <div class="row">
       <p>
         <label>
-          <input id= "makePublic" type="checkbox" />
+          <input id="makePublic" type="checkbox" />
           <span>Visible to Everyone</span>
         </label>
       </p>
@@ -82,5 +83,5 @@
     <p><a href="/">Menu</a></p>
   </div> <!-- container -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="/js/add.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="/js/add.js"></script>
