rm prepopulated fields

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,11 +11,11 @@
       <h4 class="center-align">Login</h4>
     <div id="instDiv">
       <div class="input-field col s6">
-        <input value="User1" id="username" type="text" class="validate" />
+        <input value="" id="username" type="text" class="validate" />
         <label class="active">Username</label>
       </div>
       <div class="input-field col s6">
-        <input value="password" id="password" type="password" class="validate" />
+        <input value="" id="password" type="password" class="validate" />
         <label class="active">Password</label>
       </div>
       <div class="red-text text-darken-3" id="errorMsg" style="display:none"></div>
