--- a/views/newUser.handlebars
+++ b/views/newUser.handlebars
@@ -9,11 +9,11 @@
     <h4 class="center-align">Create New User</h4>
     <div id="instDiv">
       <div class="input-field col s6">
-        <input value="User1" id="newUser" type="text" class="validate" />
+        <input value="" id="newUser" type="text" class="validate" />
         <label class="active">Username</label>
       </div>
       <div class="input-field col s6">
-        <input value="password" id="newPassword" type="password" class="validate" />
+        <input value="" id="newPassword" type="password" class="validate" />
         <label class="active">Password</label>
       </div>
       <div class="red-text text-darken-3" id="resMsg" style="display:none"></div>
