--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -26,7 +26,7 @@
     <div id="instDiv">
       <div class="input-field col s6">
         {{!-- remove soup from input field --}}
-        <input value="Soup" id="recipe-name" type="text" class="validate" />
+        <input value="" id="recipe-name" type="text" class="validate" />
         <label class="active">Recipe Name</label>
         <a id="addName" class="waves-effect waves-light btn-large yellow darken-2">Add Recipe name</a>
       </div>
@@ -41,7 +41,7 @@
         </div>
         <div class="input-field col s6">
           <input value="" id="ingredient" type="text" class="validate" />
-          <label class="active">Ingredients</label>
+          <label class="active">Ingredient</label>
         </div>
         <a id="addIngredient" class="waves-effect waves-light btn-large yellow darken-2">Add Ingredient</a>
 
@@ -80,7 +80,6 @@
 
   <div class="card-content center-align">
     <a id="save" class="waves-effect waves-light btn-large yellow darken-2">Save Recipe</a>
-    <p><a href="/">Menu</a></p>
   </div> <!-- container -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
