add print functionality

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -25,10 +25,21 @@
     <span class="card-title activator grey-text text-darken-4"> </span>
     <div id="instDiv">
       <div class="input-field col s6">
-        {{!-- remove soup from input field --}}
-        <input value="" id="recipe-name" type="text" class="validate" />
-        <label class="active">Recipe Name</label>
-        <a id="addName" class="waves-effect waves-light btn-large yellow darken-2">Add Recipe name</a>
+
+        <div class="row">
+        <div class="input-field col s9">
+
+      
+          {{!-- remove soup from input field --}}
+          <input value="" id="recipe-name" type="text" class="validate" />
+          <label class="active">Recipe Name</label>
+        </div>
+          <div class="col s3">
+
+          
+            <a id="addName" class="waves-effect waves-light btn-large yellow darken-2">Add Recipe name</a>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="input-field col s3">
