--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -5,4 +5,9 @@
 .recipe-card {
     border: 1px solid black;
     box-shadow: 5px 5px 5px #888888;
+    margin-top: 10px;
+}
+
+.search-bar {
+    margin: 25px;
 }
