--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -21,50 +21,67 @@
 
 <div class="container">
   <div class="card-content center-align">
-    <h4>Add Recipe</h4>
+    <h2 class="add-recipe">Add Recipe</h2>
     <span class="card-title activator grey-text text-darken-4"> </span>
     <div id="instDiv">
-      <div class="input-field col s6">
 
-        <div class="row">
-        <div class="input-field col s9">
+      <div class="input-field col s6"> <!-- input fields -->
+        <div class="row"> <!--recipe name input-field-->
 
-      
-          {{!-- remove soup from input field --}}
-          <input value="" id="recipe-name" type="text" class="validate" />
-          <label class="active">Recipe Name</label>
-        </div>
-          <div class="col s3">
-
-          
-            <a id="addName" class="waves-effect waves-light btn-large yellow darken-2">Add Recipe name</a>
+          <div class="input-field col s9">
+            <input value="" id="recipe-name" type="text" class="validate" />
+            <label class="active">Recipe Name</label>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s3">
-          <input value="" id="amount" type="text" class="validate" />
-          <label class="active">Quantity</label>
-        </div>
-        <div class="input-field col s3">
-          <input value="" id="measure" type="text" class="validate" />
-          <label class="active">Measurement</label>
-        </div>
-        <div class="input-field col s6">
-          <input value="" id="ingredient" type="text" class="validate" />
-          <label class="active">Ingredient</label>
-        </div>
-        <a id="addIngredient" class="waves-effect waves-light btn-large yellow darken-2">Add Ingredient</a>
 
-      </div>
-      <div class=" center-align">
-        <div class="input-field col s6 center-align">
-          <input value="" id="instruction" type="text" class="validate" />
-          <label class="active">Instruction</label>
-          <a id="addInstruction" class="waves-effect waves-light btn-large yellow darken-2">Add Instruction</a>
-        </div>
-      </div>
-    </div>
+          <div class="col s3"> <!--button-->
+          <a id="addName" class="waves-effect waves-light btn-large yellow darken-2">Add Recipe name</a>
+          </div> <!--button-->
+
+        </div> <!--row-->
+      </div> <!--recipe name input-field-->
+
+      <div class="input-field col s6"> <!-- ingredient input-field col -->
+        <div class="row"> <!-- ingredient input-field row -->
+
+            <div class="input-field col s2">
+              <input value="" id="amount" type="text" class="validate" />
+              <label class="active">Quantity</label>
+            </div>
+
+            <div class="input-field col s2">
+              <input value="" id="measure" type="text" class="validate" />
+              <label class="active">Measurement</label>
+            </div>
+
+            <div class="input-field col s5">
+              <input value="" id="ingredient" type="text" class="validate" />
+              <label class="active">Ingredient</label>
+            </div>
+
+            <div class="col s3"> <!--button-->
+            <a id="addIngredient" class="waves-effect waves-light btn-large yellow darken-2">Add Ingredient</a>
+            </div> <!--button-->
+        </div> <!-- ingredient input-field row -->
+      </div> <!-- ingredient input-field col -->
+
+      <div class="input-field col s6"> <!-- instruction input field col -->
+        <div class="row"> <!-- instruction input field row -->
+
+          <div class="input-field col s9">
+            <input value="" id="instruction" type="text" class="validate" />
+            <label class="active">Instruction</label>
+          </div>
+
+          <div class="col s3">
+            <a id="addInstruction" class="waves-effect waves-light btn-large yellow darken-2">Add Instruction</a>
+          </div>
+
+        </div> <!-- instruction input field row -->
+      </div> <!-- instruction input field col -->
+
+
+
+    </div> <!-- instDiv -->
 
     <div class="row ">
       <h3 id="recipeName"></h3>
