--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -83,8 +83,9 @@
 
     </div> <!-- instDiv -->
 
+  <div id="recipeCard" class="hide"> <!--recipe-card-->
     <div class="row ">
-      <h3 id="recipeName"></h3>
+      <h3 id="recipeName" class="hide"></h3>
       <div class="col s6 center-align">
         <ul id="listIng">
           <h4 class="card-content center-align">Ingredients</h4>
@@ -96,6 +97,10 @@
         </ul>
       </div>
     </div>
+  </div> <!--recipe-card-->
+
+
+
     <div class="row">
       <p>
         <label>
