got all buttons to show on click

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -85,7 +85,7 @@
 
   <div id="recipeCard" class="hide"> <!--recipe-card-->
     <div class="row ">
-      <h3 id="recipeName" class="hide"></h3>
+      <h3 id="recipeName"></h3>
       <div class="col s6 center-align">
         <ul id="listIng">
           <h4 class="card-content center-align">Ingredients</h4>
