--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -33,8 +33,8 @@
       </div>
 
   
-  <div id="print-screen" class="container col s10">
-    <div class="col recipe-card s12">
+  <div  class="container col s10">
+    <div id="print-screen" class="col recipe-card s12">
       <div class="col s12">
         <h1>{{recipe.title}}</h1>
         <h3>Ingredients</h3>
